데이터 불러오기및 컴포넌트화 정리

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   background-position: center;
 }
 
+.product-img {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+}
+
 .App {
   text-align: center;
 }
